fix: #103 修复列表脑图视图辅助线错位问题 | Fixed the issue of misalignment of guides in the brain map view of the list.

--- a/style/module/custom-type-map.css
+++ b/style/module/custom-type-map.css
@@ -11,6 +11,7 @@
 .protyle-content [custom-type~=map] [data-node-id].li {
   /* 列表项文字设置居中 */
   display: flex;
+  align-items: center;
 }
 .protyle-content [custom-type~="思维导图"] [data-node-id].li:first-of-type::after,
 .protyle-content [custom-type~="导图"] [data-node-id].li:first-of-type::after,
@@ -24,24 +25,6 @@
 .protyle-content [custom-type~=map] [data-node-id].li:nth-last-of-type(2)::before {
   /* 取消多余线条 */
   border: none;
-}
-.protyle-content [custom-type~="思维导图"] [data-node-id].li:first-of-type:nth-last-of-type(2),
-.protyle-content [custom-type~="导图"] [data-node-id].li:first-of-type:nth-last-of-type(2),
-.protyle-content [custom-type~="脑图"] [data-node-id].li:first-of-type:nth-last-of-type(2),
-.protyle-content [custom-type~=mind-map] [data-node-id].li:first-of-type:nth-last-of-type(2),
-.protyle-content [custom-type~=map] [data-node-id].li:first-of-type:nth-last-of-type(2) {
-  /* 单子项居中 */
-  top: 50%;
-  transform: translate(0, -50%);
-}
-.protyle-content [custom-type~="思维导图"] [data-node-id].li:first-of-type:nth-last-of-type(2)::after,
-.protyle-content [custom-type~="导图"] [data-node-id].li:first-of-type:nth-last-of-type(2)::after,
-.protyle-content [custom-type~="脑图"] [data-node-id].li:first-of-type:nth-last-of-type(2)::after,
-.protyle-content [custom-type~=mind-map] [data-node-id].li:first-of-type:nth-last-of-type(2)::after,
-.protyle-content [custom-type~=map] [data-node-id].li:first-of-type:nth-last-of-type(2)::after {
-  /* 单个子项直线 */
-  border-radius: 0;
-  height: calc(50% - var(--custom-list-guides-line-width) / 8);
 }
 .protyle-content [custom-type~="思维导图"] [data-node-id].li:first-of-type::before,
 .protyle-content [custom-type~="导图"] [data-node-id].li:first-of-type::before,
@@ -60,6 +43,14 @@
   border-bottom: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
   border-bottom-left-radius: var(--custom-border-radius);
 }
+.protyle-content [custom-type~="思维导图"] [data-node-id].li:first-of-type:nth-last-of-type(2)::after,
+.protyle-content [custom-type~="导图"] [data-node-id].li:first-of-type:nth-last-of-type(2)::after,
+.protyle-content [custom-type~="脑图"] [data-node-id].li:first-of-type:nth-last-of-type(2)::after,
+.protyle-content [custom-type~=mind-map] [data-node-id].li:first-of-type:nth-last-of-type(2)::after,
+.protyle-content [custom-type~=map] [data-node-id].li:first-of-type:nth-last-of-type(2)::after {
+  /* 单个子项直线 */
+  border-radius: 0;
+}
 .protyle-content [custom-type~="思维导图"] [data-node-id].li::before,
 .protyle-content [custom-type~="导图"] [data-node-id].li::before,
 .protyle-content [custom-type~="脑图"] [data-node-id].li::before,
@@ -68,10 +59,10 @@
   /* 上导航线 */
   content: "";
   position: absolute;
-  height: calc(50% - var(--custom-list-guides-line-width) / 2);
+  height: 50%;
   border-left: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
   width: 2em;
-  top: 50%;
+  top: calc(50% - var(--custom-list-guides-line-width) / 2);
   border-top: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
 }
 .protyle-content [custom-type~="思维导图"] [data-node-id].li::after,
@@ -82,10 +73,19 @@
   /* 下导航线 */
   content: "";
   position: absolute;
-  height: calc(50% - var(--custom-list-guides-line-width) / 2);
+  height: 50%;
   border-left: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
   width: 2em;
+  bottom: calc(50% - var(--custom-list-guides-line-width) / 2);
   border-bottom: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
+}
+.protyle-content [custom-type~="思维导图"] [data-node-id].li[data-subtype="u"]::after,
+.protyle-content [custom-type~="导图"] [data-node-id].li[data-subtype="u"]::after,
+.protyle-content [custom-type~="脑图"] [data-node-id].li[data-subtype="u"]::after,
+.protyle-content [custom-type~=mind-map] [data-node-id].li[data-subtype="u"]::after,
+.protyle-content [custom-type~=map] [data-node-id].li[data-subtype="u"]::after {
+  /* 修复无序列表前导线错位问题 */
+  bottom: calc(50% - var(--custom-list-guides-line-width) / 4);
 }
 .protyle-content [custom-type~="思维导图"] [data-node-id].li[data-subtype="u"] > div.protyle-action,
 .protyle-content [custom-type~="导图"] [data-node-id].li[data-subtype="u"] > div.protyle-action,
@@ -189,7 +189,7 @@
   content: "";
   position: absolute;
   left: -1em;
-  top: 50%;
+  top: calc(50% - var(--custom-list-guides-line-width) / 2);
   border-top: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
   width: 2em;
   height: 0;
